test/libsolidity/syntaxTests/parsing/var_array.sol
contract Foo {
	function f() { var[] a; }
}
// ----
// ParserError 6933: (31-34): Expected primary expression.
